...
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>-1</item>
    </string-array>

    <string name="alert_okay">Okay</string>
    <string name="confirm_okay">Okay</string>
    <string name="confirm_cancel">Cancel</string>
    <string name="confirm_discard">Discard</string>
    <string name="input_okay">Okay</string>
    <string name="input_cancel">Cancel</string>
    <string name="alert_positive">Yes</string>
    <string name="alert_negative">No</string>

    <string name="new_entry_title">&lt;new entry&gt;</string>
    <string name="untitled_entry_title">&lt;untitled&gt;</string>

    <string name="detail_title_hint">Detail name</string>
    <string name="detail_location_hint">URL / Location</string>
    <string name="detail_item_key_hint">Key</string>
    <string name="detail_item_value_hint">Value</string>

    <string name="settings_cloud_title">Sync data to Google Drive</string>
    <string name="settings_timeout_title">Idle Timeout</string>
    <string name="settings_password_title">Change Password &#8230;</string>
    <string name="settings_import_title">Import old data &#8230;</string>
    <string name="settings_export_title">Backup data &#8230;</string>
...
