...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
	<com.munger.passwordkeeper.view.widget.TextInputWidget
	    android:id="@+id/viewdetail_namelbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:noDelete="true"
        app:hint="@string/detail_title_hint"
    />
	<com.munger.passwordkeeper.view.widget.TextInputWidget
	    android:id="@+id/viewdetail_locationlbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewdetail_namelbl"
        app:noDelete="true"
        app:hint="@string/detail_location_hint"
    />
    
    
	<ListView android:id="@+id/viewdetail_itemlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/viewdetail_addbtn"
        android:layout_below="@+id/viewdetail_locationlbl"
		android:focusable="false"
    >
        <!--
        <com.munger.passwordkeeper.view.widget.DetailItemWidget
            android:layout_width="wrap_content"
...
