...
			android:inputType="textPassword"
			android:maxLines="1" >
			<requestFocus />
		</EditText>
	
	    <EditText
	        android:id="@+id/createfile_password1ipt"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="password"
	        android:inputType="textPassword"
	        android:maxLines="1" >
			<requestFocus />
		</EditText>

		<EditText
            android:id="@+id/createfile_password2ipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="re-enter password"
            android:inputType="textPassword"
            android:maxLines="1"  />
...
        android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true">

		<Button
            android:id="@+id/createfile_okaybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:text="Okay"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true" />

...
