package com.munger.passwordkeeper;

import android.Manifest;
import android.app.Activity;
import android.content.Context;
import android.content.Intent;
import android.content.res.Resources;
import android.os.Build;
import android.os.Environment;

import androidx.annotation.Nullable;
import androidx.test.espresso.ViewInteraction;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.filters.SmallTest;
import androidx.test.ext.junit.runners.AndroidJUnit4;

import android.util.Log;
import android.view.View;
import android.widget.EditText;

import com.google.android.material.shape.CutCornerTreatment;
import com.google.api.client.util.DateTime;
import com.munger.passwordkeeper.helpers.DriveHelper;
import com.munger.passwordkeeper.helpers.NavigationHelper;
import com.munger.passwordkeeper.struct.PasswordDetails;
import com.munger.passwordkeeper.struct.PasswordDetailsPair;
import com.munger.passwordkeeper.struct.Settings;
import com.munger.passwordkeeper.struct.documents.PasswordDocument;
import com.munger.passwordkeeper.struct.documents.PasswordDocumentFile;
import com.munger.passwordkeeper.struct.documents.PasswordDocumentStream;
import com.munger.passwordkeeper.view.AboutFragment;
import com.munger.passwordkeeper.view.CreateFileFragment;
import com.munger.passwordkeeper.view.SettingsFragment;
import com.munger.passwordkeeper.view.ViewDetailFragment;
import com.munger.passwordkeeper.view.ViewFileFragment;
import com.munger.passwordkeeper.view.widget.DetailItemWidget;
import com.munger.passwordkeeper.view.widget.TextInputWidget;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.After;
import org.junit.Before;
import org.junit.Ignore;
import org.junit.Rule;
import org.junit.Test;
import org.junit.internal.runners.statements.InvokeMethod;
import org.junit.rules.TestName;
import org.junit.rules.TestRule;
import org.junit.rules.Timeout;
import org.junit.runner.RunWith;
import org.junit.runners.model.Statement;

import java.io.DataInputStream;
import java.io.File;
import java.io.FileInputStream;
import java.io.FileOutputStream;
import java.io.FileWriter;
import java.io.IOException;
import java.io.InputStream;
import java.util.Random;

import androidx.fragment.app.Fragment;
import androidx.fragment.app.FragmentActivity;
import androidx.test.espresso.DataInteraction;
import androidx.test.rule.ActivityTestRule;
import androidx.test.rule.DisableOnAndroidDebug;
import androidx.test.uiautomator.UiDevice;
import androidx.test.uiautomator.UiObject;
import androidx.test.uiautomator.UiObjectNotFoundException;
import androidx.test.uiautomator.UiSelector;

import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.matcher.ViewMatchers.withHint;
import static androidx.test.platform.app.InstrumentationRegistry.getInstrumentation;
import static androidx.test.espresso.Espresso.onData;
import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.clearText;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.typeText;
import static androidx.test.espresso.assertion.ViewAssertions.doesNotExist;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.hasDescendant;
import static androidx.test.espresso.matcher.ViewMatchers.isAssignableFrom;
import static androidx.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static com.munger.passwordkeeper.CustomMatchers.assertDoesExist;
import static com.munger.passwordkeeper.CustomMatchers.withIndex;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.anything;
import static org.hamcrest.Matchers.containsString;
import static org.hamcrest.Matchers.hasXPath;
import static org.hamcrest.Matchers.instanceOf;
import static org.hamcrest.Matchers.is;
import static org.junit.Assert.assertEquals;
import static org.junit.Assert.assertFalse;
import static org.junit.Assert.assertNotNull;
import static org.junit.Assert.assertNull;
import static org.junit.Assert.assertSame;
import static org.junit.Assert.assertTrue;


/**
 * Created by codymunger on 12/6/16.
 */

@RunWith(AndroidJUnit4.class)
@SmallTest
public class FunctionalTest
{
    private MainStateDer mainState;
    public float appTimeout = Float.MAX_VALUE;

    public class SettingsDer extends Settings
    {
        public float timeout = appTimeout;

        @Override
        public float getTimeout()
        {
            return timeout;
        }

        public float getRealTimeout() {return super.getTimeout();}
    }

    public class NavDer extends NavigationHelper
    {
        public boolean exitCalled = false;

        @Override
        protected void doExit()
        {
            exitCalled = true;
        }
    }


    public Object docLock = new Object();
    public class PasswordDocumentFileDer extends PasswordDocumentFile
    {
        public PasswordDocumentFileDer(String name) {
            super(name);
        }

        public int saveCalled = 0;

        @Override
        public void save() throws Exception
        {
            super.save();

            synchronized (docLock)
            {
                System.out.println("save " + name + " called");
                saveCalled++;
                docLock.notify();
            }
        }
    }

    public PasswordDocumentFile remoteFile = null;

    public class DriveHelperDer extends DriveHelper
    {
        public PasswordDocumentFileDer doc;

        @Override
        public void connect()
        {
            connected = true;

            synchronized (lock)
            {
                lock.notify();
            }
        }

        private String fileId = "testId";

        @Override
        public String getOrCreateFile(String name) throws IOException
        {
            return fileId;
        }

        public int metadataCalled = 0;
        public int getRemoteCalled = 0;
        public int updateRemoteCalled = 0;

        public DateTime lastModified = new DateTime(System.currentTimeMillis());
        public boolean isTrashed = false;
        public long size = 0;

        @Override
        public Meta getMetadata(String fileId) throws IOException
        {
            assertSame(fileId, this.fileId);
            Meta ret = new Meta();
            ret.modified = lastModified;

            if (remoteFile != null)
            {
                File remotePath = new File(remoteFile.getHistoryFilePath());
                ret.size = remotePath.length();
            }
            else
                ret.size = 0;

            ret.trashed = isTrashed;
            metadataCalled++;

            return ret;
        }

        public void trashRemoteFile(String fileId, boolean trashed) throws Exception
        {
            isTrashed = trashed;
        }

        @Override
        public InputStream getRemoteFile(String fileId) throws IOException
        {
            assertSame(fileId, this.fileId);

            if (remoteFile == null)
                return null;

            File remotePath = new File(remoteFile.getHistoryFilePath());
            getRemoteCalled++;
            return new FileInputStream(remotePath);
        }

        @Override
        public DateTime updateRemoteByPath(String fileId, String path) throws IOException
        {
            assertSame(fileId, this.fileId);

            if (remoteFile == null)
                throw new IOException("failed to update remote file");

            copyFile(path, remoteFile.getHistoryFilePath());
            updateRemoteCalled++;

            return new DateTime(System.currentTimeMillis());
        }
    }

    void copyFile(String inpath, String outpath) throws IOException
    {
        File out = new File(outpath);
        FileOutputStream fos = new FileOutputStream(out);
        File in = new File(inpath);
        FileInputStream fis = new FileInputStream(in);

        int chunk = 4098;
        long sz = in.length();
        long idx = 0;
        byte[] buf = new byte[chunk];
        while (idx < sz)
        {
            long remaining = sz - idx;
            int readSz = (int) Math.min(chunk, remaining);
            fis.read(buf, 0, readSz);
            fos.write(buf, 0, readSz);

            idx += readSz;
        }

        fis.close();
        fos.close();
    }

    PasswordDocumentFileDer localDoc = null;

    public class MainStateDer extends MainState
    {
        protected SettingsDer mySettings;
        public void updateTimeout(float minutes)
        {
            mySettings.timeout = minutes;
            quitTimer.reset();
        }

        @Override
        protected void setupPreferences()
        {
            mySettings = new SettingsDer();
            settings = mySettings;
        }

        protected NavDer myNavigationHelper;
        @Override
        protected void setupNavigation()
        {
            myNavigationHelper = new NavDer();
            navigationHelper = myNavigationHelper;
        }

        protected DriveHelperDer myDriveHelper;
        @Override
        protected DriveHelper createDriveHelper()
        {
            if (myDriveHelper == null)
                myDriveHelper = new DriveHelperDer();

            return myDriveHelper;
        }

        @Override
        protected PasswordDocument createDocument()
        {
            return localDoc;
        }

        @Override
        public void setupDocument()
        {
            if (localDoc != null)
                document = localDoc;

            super.setupDocument();
        }
    }

    //@Rule
    //public Timeout globalTimeout = Timeout.seconds(20); // 10 seconds max per method tested

    @Rule public TestName testName = new TestName();

    public class ActivityRule extends ActivityTestRule
    {
        public ActivityRule()
        {
            super(TestingMainActivity.class);
        }

        @Override
        protected void afterActivityLaunched()
        {
            super.afterActivityLaunched();

            String meth = testName.getMethodName();
            if (!meth.contains("emote"))
                try {before(); } catch(Exception e){}
        }

        @Override
        protected void afterActivityFinished()
        {
            mainState.quitTimer.stop();
            super.afterActivityFinished();
        }

        @Override
        protected Intent getActivityIntent()
        {
            Intent i = super.getActivityIntent();
            return i;
        }
    }

    public class DebugTimeoutRule implements TestRule
    {
        public DebugTimeoutRule() {  }

        @Override
        public Statement apply(Statement base, org.junit.runner.Description description)
        {
            appTimeout = 0.33f;
            return base;
        }
    }

    @Rule
    public ActivityTestRule<TestingMainActivity> activityRule = new ActivityRule();

    @Rule
    public TestRule timeoutRule = new DisableOnAndroidDebug(new DebugTimeoutRule());

    public void before() throws Exception
    {
        TestingMainActivity activity = activityRule.getActivity();

        if (mainState == null)
            mainState = new MainStateDer();

        MainState.setInstance(mainState);

        mainState.setContext(activity, activity);

        if (mainState.mySettings.getSaveToCloud() == true);
            mainState.mySettings.setSaveToCloud(false);

        if (mainState.document == null && localDoc == null)
        {
            localDoc = new PasswordDocumentFileDer("local");
            localDoc.setRootPath(activity.getFilesDir().getAbsolutePath());
            localDoc.deleteFiles();
        }

        if (mainState.document == null)
        {
            mainState.setupDocument();
        }
    }

    @After
    public void after() throws Exception
    {
        localDoc = null;
        remoteFile = null;
    }

    @Test
    public void createFileFail() throws Exception
    {
        localDoc.delete();
        activityRule.getActivity().superInit();

        CustomMatchers.assertDoesExist(onView(withId(R.id.createfile_password1ipt)));
        onView(withId(R.id.createfile_password1ipt)).perform(typeText("pass"));
        onView(withId(R.id.createfile_password2ipt)).perform(typeText("no match"), closeSoftKeyboard());
        onView(withId(R.id.createfile_okaybtn)).perform(click());

        onView(allOf(withClassName(containsString("Button")), withText(R.string.alert_okay))).perform(click());

        onView(withId(R.id.createfile_password1ipt)).perform(clearText()).perform(typeText("pass"));
        onView(withId(R.id.createfile_password2ipt)).perform(clearText()).perform(typeText("pass"), closeSoftKeyboard());
        onView(withId(R.id.createfile_okaybtn)).perform(click());

        onView(allOf(withClassName(containsString("Button")), withText(R.string.alert_okay))).check(doesNotExist());
    }

    @Test
    public void openFileFail() throws Exception
    {
        String password = "pass";
        localDoc.setPassword(password);
        localDoc.save();

        activityRule.getActivity().superInit();
        CustomMatchers.assertDoesExist(onView(withClassName(containsString("EditText"))));
        onView(withClassName(containsString("EditText"))).perform(typeText("wrongpass"), closeSoftKeyboard());
        onView(allOf(withClassName(containsString("Button")), withText(R.string.input_okay))).perform(click());

        onView(allOf(withClassName(containsString("Button")), withText(R.string.alert_okay))).perform(click());


        onView(withClassName(containsString("EditText"))).perform(clearText()).perform(typeText(password), closeSoftKeyboard());
        onView(allOf(withClassName(containsString("Button")), withText(R.string.input_okay))).perform(click());

        onView(allOf(withClassName(containsString("Button")), withText(R.string.alert_okay))).check(doesNotExist());

    }

    @Test
    public void createFileEditDefault() throws Exception
    {
        //password view
        activityRule.getActivity().superInit();
        CustomMatchers.assertDoesExist(onView(withId(R.id.createfile_password1ipt)));
        onView(withId(R.id.createfile_password1ipt)).perform(clearText(), typeText("pass"));
        onView(withId(R.id.createfile_password2ipt)).perform(clearText(), typeText("pass"), closeSoftKeyboard());
        onView(withId(R.id.createfile_okaybtn)).perform(click());

        //document view
        CustomMatchers.assertInView((MainActivity) mainState.activity, ViewFileFragment.class);
        onData(is(instanceOf(PasswordDetails.class))).atPosition(0).check(matches(hasDescendant(withText(R.string.new_entry_title))));

        boolean thrown = false;

        try
        {
            onData(is(instanceOf(PasswordDetails.class))).atPosition(1).check(doesNotExist());
        }
        catch(Exception e){
            thrown = true;
        }

        assertTrue(thrown);
    }

    public static Matcher<View> pairWithKey(final String key)
    {
        return new TypeSafeMatcher<View>()
        {
            int currentIndex = 0;

            @Override
            public void describeTo(Description description)
            {
                description.appendText("pair widget with key: ");
                description.appendValue(key);
            }

            @Override
            public boolean matchesSafely(View view)
            {
                if (!(view instanceof DetailItemWidget))
                    return false;

                String wkey = ((DetailItemWidget)view).getKey();
                if (wkey == null)
                    return false;

                return wkey.equals(key);
            }
        };
    }

    public static Matcher<View> pairWithValue(final String value)
    {
        return new TypeSafeMatcher<View>()
        {
            int currentIndex = 0;

            @Override
            public void describeTo(Description description)
            {
                description.appendText("pair widget with value: ");
                description.appendValue(value);
            }

            @Override
            public boolean matchesSafely(View view)
            {
                if (!(view instanceof DetailItemWidget))
                    return false;

                String wval = ((DetailItemWidget)view).getValue();
                if (wval == null)
                    return false;

                return wval.equals(value);
            }
        };
    }

    public static Matcher<View> inputWithHint(final String value)
    {
        return new TypeSafeMatcher<View>()
        {
            @Override
            protected boolean matchesSafely(View view)
            {
                if (!(view instanceof TextInputWidget))
                    return false;

                String hintVal = ((TextInputWidget)view).getInput().getHint().toString();
                if (hintVal == null)
                    return false;

                return hintVal.equals(value);
            }

            @Override
            public void describeTo(Description description)
            {
                description.appendText("input widget with hint: ");
                description.appendValue(value);
            }
        };
    }

    private String name = "a name";
    private String location = "a location";
    private String detKey1 = "a key 1";
    private String detValue1 = "a value 1";
    private String detKey2 = "a key 2";
    private String detValue2 = "a value 2";

    private void createFileEditNewEntry() throws Exception
    {
        //password view
        activityRule.getActivity().superInit();
        CustomMatchers.assertDoesExist(onView(withId(R.id.createfile_password1ipt)));
        onView(withId(R.id.createfile_password1ipt)).perform(clearText(), typeText("pass"));
        onView(withId(R.id.createfile_password2ipt)).perform(clearText(), typeText("pass"), closeSoftKeyboard());
        onView(withId(R.id.createfile_okaybtn)).perform(click());

        //document view
        CustomMatchers.assertInView((MainActivity) mainState.activity, ViewFileFragment.class);
        onData(is(instanceOf(PasswordDetails.class))).atPosition(0).perform(click());

        //details view
        CustomMatchers.assertInView((MainActivity) mainState.activity, ViewDetailFragment.class);
        ViewDetailFragment detFrag = (ViewDetailFragment) ((MainActivity) mainState.activity).getCurrentFagment();
        assertEquals(true, detFrag.getEditable());

        onView(withId(R.id.viewdetail_namelbl)).check(matches(hasDescendant(withText(""))));
        onView(withId(R.id.viewdetail_locationlbl)).check(matches(hasDescendant(withText(""))));
        DataInteraction inter = onData(is(instanceOf(PasswordDetailsPair.class))).atPosition(0);
        inter.check(matches(allOf(pairWithKey(""), pairWithValue(""))));

        CustomMatchers.assertHiddenOrDoesNotExist(onData(is(instanceOf(PasswordDetailsPair.class))).atPosition(1));

        //edit details
        CustomMatchers.assertDoesExist(onView(allOf(isDescendantOfA(withId(R.id.viewdetail_namelbl)),withClassName(containsString("EditText")))));
        onView(allOf(isDescendantOfA(withId(R.id.viewdetail_namelbl)),withClassName(containsString("EditText")))).perform(clearText(), typeText(name));
        onView(allOf(isDescendantOfA(withId(R.id.viewdetail_locationlbl)),withClassName(containsString("EditText")))).perform(clearText(), typeText(location));
        DataInteraction dint = onData(is(instanceOf(PasswordDetailsPair.class))).atPosition(0);
        DataInteraction din2 = dint.onChildView(allOf(withHint("Key"), withClassName(containsString("EditText"))));
        din2.perform(clearText(), typeText(detKey1));
        Thread.sleep(25);
        din2 = dint.onChildView(allOf(withHint("Value"), withClassName(containsString("EditText"))));
        din2.perform(clearText(), typeText(detValue1), closeSoftKeyboard());
        Thread.sleep(25);

        onView(withId(R.id.viewdetail_addbtn)).perform(click());
        dint = onData(is(instanceOf(PasswordDetailsPair.class))).atPosition(1);
        din2 = dint.onChildView(allOf(withHint("Key"), withClassName(containsString("EditText"))));
        din2.perform(clearText(), typeText(detKey2));
        Thread.sleep(25);
        din2 = dint.onChildView(allOf(withHint("Value"), withClassName(containsString("EditText"))));
        din2.perform(clearText(), typeText(detValue2), closeSoftKeyboard());
    }

    @Test
    public void createFileEditNewEntryAndSave() throws Exception
    {
        createFileEditNewEntry();

        //back out
        activityRule.getActivity().resetBackCalledCount();
        while (activityRule.getActivity().getBackTriggeredCount() == 0)
        {
            pressBack();
            Thread.sleep(50);
        }

        onView(withText(R.string.confirm_okay)).perform(click());

        //document view
        CustomMatchers.assertInView((MainActivity) mainState.activity, ViewFileFragment.class);
        assertDoesExist(onData(is(instanceOf(PasswordDetails.class))).atPosition(0));
        onData(is(instanceOf(PasswordDetails.class))).atPosition(0).check(matches(hasDescendant(withText(name))));

        boolean thrown = false;

        try
        {
            onData(is(instanceOf(PasswordDetails.class))).atPosition(1).check(doesNotExist());
        }
        catch(Exception e){
            thrown = true;
        }

        assertTrue(thrown);
    }

    @Test
    public void createFileEditNewEntryAndDiscard() throws Exception
    {
        createFileEditNewEntry();

        //back out
        activityRule.getActivity().resetBackCalledCount();
        while (activityRule.getActivity().getBackTriggeredCount() == 0)
        {
            pressBack();
            Thread.sleep(50);
        }

        onView(withText(R.string.confirm_discard)).perform(click());

        //document view
        CustomMatchers.assertInView((MainActivity) mainState.activity, ViewFileFragment.class);
        onData(is(instanceOf(PasswordDetails.class))).atPosition(0).check(matches(hasDescendant(withText(R.string.new_entry_title))));

        boolean thrown = false;

        try
        {
            onData(is(instanceOf(PasswordDetails.class))).atPosition(1).check(doesNotExist());
        }
        catch(Exception e){
            thrown = true;
        }

        assertTrue(thrown);
    }

    @Test
    public void createFileBackOut() throws Exception
    {
        //password view
        activityRule.getActivity().superInit();

        Log.d("password keeper", "debug password1ipt " + R.id.createfile_password1ipt);
        CustomMatchers.assertDoesExist(onView(withId(R.id.createfile_password1ipt)));
        onView(withId(R.id.createfile_password1ipt)).perform(clearText(), typeText("pass"));
        onView(withId(R.id.createfile_password2ipt)).perform(clearText(), typeText("pass"), closeSoftKeyboard());
        onView(withId(R.id.createfile_okaybtn)).perform(click());

        //document view
        CustomMatchers.assertInView((MainActivity) mainState.activity, ViewFileFragment.class);

        //back out
        int tries = 0;
        activityRule.getActivity().resetBackCalledCount();
        while (activityRule.getActivity().getBackCalledCount() == 0 && tries < 5)
        {
            pressBack();
            Thread.sleep(50);
            tries++;
        }

        assertFalse(activityRule.getActivity().getDoexitCalled());
    }

    private String existingTitle = "name";

    protected void createExistingFile() throws Exception
    {
        String password = "pass";
